fix the bugs!!!